Migrate users of Optional.get()
Upgraded modernizer is flagging these users, migrate them to better
alternatives.

Change-Id: Iffea317aedce4e2e6660217b2a9d4fd277f9c451
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>